fix center replacement alignment

--- a/main.css
+++ b/main.css
@@ -85,6 +85,7 @@ body {
 }
 
 .bandpics>div {
+    text-align: center;
     margin: auto;
 }
 
